[project]
name = "tools"
version = "0.1.0"
description = "Python helpers for esk_builder"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "requests>=2.32.0",
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tools = "tools.cli:app"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "S113"]

[tool.basedpyright]
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.14"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportMissingImports = "warning"
reportMissingModuleSource = "warning"
